---------------------------------------------------------------------------------------------------
Version: 2.1.3
Date: ????
  Minor Features:
    - Add GPS ping for when player clicks on someone's location in the player list.
  Changes:
    - Change default spacing between fluid resource patches (like crude-oil) to be 6 instead of 4.
    - Added config setting to control the spacing between fluid resource patches. (Not exposed in the GUI.)
    - Set default starting items to be the same as Vanilla freeplay.
  Bugfixes:
    - Fixed logistics chest not shown in coin shop due to outdated item name.
---------------------------------------------------------------------------------------------------
Version: 2.1.2
Date: 2024-10-23
  Bugfixes:
    - Fix spawn controls tab in custom GUI not being re-enabled when GUI is recreated (on mod update for example).
  Info:
    - Add a warning note explanation when the custom respawn feature is not available.
---------------------------------------------------------------------------------------------------
Version: 2.1.1
Date: 2024-10-23
  Bugfixes:
    - Fix a crash when clicking on player location in player list.
---------------------------------------------------------------------------------------------------
Version: 2.1.0
Date: 2024-10-22
  Major Features:
    - EXPERIMENTAL Support for Factorio 2.0 and Space Age DLC! Currently, only spawning on Nauvis is supported. More features to support space age will be added in the near future.
  Minor Features:
    - Added a button to teleport back to your respawn point. This is useful if you get placed at 0,0 coming back from space.
  Bugfixes:
    - Fixed an issues with surface blacklist being ignored.
    - Fixed an issue where I broke buddy spawn chunk gen.
---------------------------------------------------------------------------------------------------
Version: 2.0.4
Date: 2024-10-19
  Bugfixes: