@@ -84,6 +84,7 @@ oarc-looking-for-buddy=__1__ is looking for a buddy.
 oarc-avail-bases-join=Available Bases to Join:
 oarc-spawn-spots-remaining=__1__ (__2__ spots remaining)
 oarc-cancel-button-caption=Cancel
+oarc-confirm-button-caption=Confirm
 oarc-return-to-previous-tooltip=Return to the previous menu.
 oarc-player-requesting-join-you=__1__ is requesting to join your base!
 oarc-waiting-for-spawn-owner=Waiting for spawn owner to respond...
@@ -106,6 +107,13 @@ oarc-secondary-spawn-info-surface-label=Secondary: __1__ (x=__2__, y=__3__)
 oarc-spawn-info-location-button=Show Map Location
 oarc-spawn-info-location-button-tooltip=Click to show the location on the map.
 
+oarc-player-reset-header=Player Reset
+oarc-player-reset-note=This will let you [color=red][font=default-bold]RESET[/font][/color] your player and choose new spawn options. If you created your own spawn, it will be [color=red][font=default-bold]DELETED[/font][/color] or transferred to someone else if they joined. If you are in a shared base, you will be [color=red][font=default-bold]REMOVED[/font][/color] from it. You [color=red][font=default-bold]CAN NOT UNDO[/font][/color] this.
+oarc-player-reset=RESET
+oarc-player-reset-tooltip=There is a confirmation dialog after clicking this button. Be careful!
+oarc-spawn-controls-disabled-delayed=Spawn is still generating! Refresh this tab after you have been sent to the new spawn.
+oarc-player-reset-are-you-sure=Are you sure you want to reset?
+oarc-player-was-reset-notify=__1__ was reset!
 
 oarc-spawn-gps-location=Location: 
 oarc-shared-spawn-controls=Shared Spawn Controls
